<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hfcai.fileprovider.MainActivity">







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/urli_parse_file"
        android:weightSum="2"
        android:layout_marginTop="10dip"
        android:orientation="horizontal">


    <TextView android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:lines="1"
        android:ellipsize="end"
        android:textSize="16sp"
        android:text="Uri from file:"
        android:gravity="right"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="125dp"
        android:layout_marginEnd="125dp" />


    <TextView
        android:id="@+id/parse_file_textview"
        android:lines="1"
        android:ellipsize="end"
        android:layout_width="0dip"
        android:textSize="16sp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/urli_parse_file"
        android:layout_height="wrap_content"
        android:id="@+id/urli_parse_string"
        android:weightSum="2"
        android:layout_marginTop="20dip"
        android:orientation="horizontal">


        <TextView android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="1"
            android:ellipsize="end"
            android:text="Uri parse String:"
            android:textSize="16sp"
            android:gravity="right"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="125dp"
            android:layout_marginEnd="125dp" />


        <TextView
            android:id="@+id/parse_string_textview"
            android:layout_width="0dip"
            android:textSize="16sp"
            android:lines="1"
            android:ellipsize="end"
            android:layout_weight="1"
            android:layout_height="wrap_content" />



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/urli_parse_string"
        android:layout_height="wrap_content"
        android:id="@+id/file_provider_uri"
        android:weightSum="2"
        android:layout_marginTop="20dip"
        android:orientation="horizontal">


        <TextView android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="file provider:"
            android:textSize="16sp"
            android:lines="1"
            android:ellipsize="end"
            android:gravity="right"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="125dp"
            android:layout_marginEnd="125dp" />


        <TextView
            android:id="@+id/file_provider_uri_textview"
            android:layout_width="0dip"
            android:textSize="16sp"
            android:lines="1"
            android:ellipsize="end"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:layout_below="@id/file_provider_uri"
        android:id="@+id/open_with_file"
        android:text="@string/open_image_from_file"
        android:onClick="click"
        android:lines="1"
        android:ellipsize="end"
        android:layout_marginTop="30dip"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />





    <Button
        android:layout_below="@id/open_with_file"
        android:id="@+id/open_with_string"
        android:text="@string/open_image_parse_string"
        android:onClick="click"
        android:layout_marginTop="10dip"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_below="@id/open_with_string"
        android:id="@+id/open_with_fileprovider"
        android:text="@string/open_image_fileprovider"
        android:onClick="click"
        android:layout_marginTop="10dip"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:layout_below="@id/open_with_fileprovider"
        android:id="@+id/take_photo"
        android:text="@string/take_photo"
        android:onClick="click"
        android:layout_marginTop="10dip"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_below="@id/take_photo"
        android:id="@+id/take_photo_new"
        android:text="@string/take_photo_new"
        android:onClick="click"
        android:layout_marginTop="10dip"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />





    <Button
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dip"
        android:id="@+id/copy_file"
        android:text="@string/copy_file_string"
        android:onClick="click"
        android:layout_marginTop="50dip"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />









</RelativeLayout>
